change some configurations